start learn object`s in JS

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
 <script src="./task.js"></script>
 <script src="./iteration.js"></script>
+<script src="./object.js"></script>
 </body>
 </html>
